Revert "Progress with OpenGL"
This reverts commit fa512780e112fbe5394e7140ccf9ee8acf365fea.